<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="android.vegard.com.fragmenttesting.SelectorFragment"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_margin="25dp"
    android:backgroundTint="@android:color/darker_gray"
    style="@android:style/ThemeOverlay.Material.Dark">

    <!-- TODO: Update blank fragment layout -->
    <!-- TextView android:layout_width="match_parent" android:layout_height="match_parent"
        android:text="@string/hello_select_fragment" /-->

    <!--LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center" -->

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bar_border"
            android:layout_margin="5dp"
            android:layout_marginLeft="25dp">

            <Button
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/temperature"
                android:id="@+id/button2"
                android:textSize="8dp"
                style="?android:attr/borderlessButtonStyle"/>

            <Button
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/humidity"
                android:id="@+id/button3"
                android:textSize="8dp"
                style="?android:attr/borderlessButtonStyle"/>

            <Button
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/pressure"
                android:id="@+id/button4"
                android:textSize="8dp"
                style="?android:attr/borderlessButtonStyle"/>

            <Button
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/radon"
                android:id="@+id/button5"
                android:textSize="8dp"
                android:background="@drawable/button_selected"
                style="?android:attr/borderlessButtonStyle"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bar_border"
            android:layout_margin="5dp">

            <Button
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/hourly"
                android:id="@+id/button6"
                android:textSize="8dp"
                style="?android:attr/borderlessButtonStyle"/>

            <Button
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/daily"
                android:id="@+id/button7"
                android:textSize="8dp"
                style="?android:attr/borderlessButtonStyle"/>

            <Button
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/weekly"
                android:id="@+id/button9"
                android:textSize="8dp"
                style="?android:attr/borderlessButtonStyle"/>

            <Button
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/monthly"
                android:id="@+id/button10"
                android:textSize="8dp"
                android:background="@drawable/button_selected"
                style="?android:attr/borderlessButtonStyle"/>
        </LinearLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp"
        android:padding="1dp"
        android:background="@drawable/button_bar_border"
        android:weightSum="3">
        <!--android:background="@drawable/my_selector"-->
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="Temp"
            android:id="@+id/radioButton"
            android:button="@android:color/transparent"
            android:background="@drawable/my_selector"
            android:padding="5dp"
            android:checked="true"
            android:onClick="onRadioButtonClicked"
            android:layout_weight="1"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="Hum"
            android:id="@+id/radioButton2"
            android:padding="5dp"
            android:button="@android:color/transparent"
            android:background="@drawable/my_selector"
            android:onClick="onRadioButtonClicked"
            android:layout_weight="1"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="Radon"
            android:button="@android:color/transparent"
            android:background="@drawable/my_selector"
            android:padding="5dp"
            android:id="@+id/radioButton3"
            android:onClick="onRadioButtonClicked"
            android:layout_weight="1"/>
    </RadioGroup>

    <!--/LinearLayout-->
</LinearLayout>
